---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2022-11-6
  Changes:
    - Cleaned up filtering and messages
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2022-11-6
  Changes:
    - fix incompatability with Cursed Filter Mining Drill
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2022-11-4
  Changes:
    - Removed Deffault Hotkey "Shift + W".
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2022-11-4
  Changes:
    - Fixed crash when no pumpjacks
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2022-11-4
  Changes:
    - Added Shortcut and Hotkey
    - Improved graphics
    - Fixed crash on startup
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2022-11-4
  Changes:
    - Added Shortcut and Hotkey
    - Improved graphics
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021-01-26
  Changes:
    - Updated to work with Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 0.18.7
Date: 2020-04-08
  Changes:
    - Added Modules to Pumpjacks
---------------------------------------------------------------------------------------------------
Version: 0.18.6
Date: 2020-03-26
  Bugfixes:
    - Fixed attempt to index field 'config' (a nil value)
---------------------------------------------------------------------------------------------------
Version: 0.18.4
Date: 2020-03-26
  Bugfixes:
    - Fixed broken pipe_to_ground logic